<resources>
    <string name="app_name">Hello World</string>
    <string name="bienvenue_sur_cette_application">Bienvenue sur cette application</string>
    <string name="connexion">Connexion</string>
    <string name="message_de_bienvenue">Bienvenue !</string>
    <string name="description_image_accueil">Image accueil</string>
    <string name="message_de_connexion">Connexion...</string>
    <string name="titre_bouton">Hey !</string>
    <string name="message_bouton">Si vous réussissez à lire ce message en entier vous connaitrez le secret du bonheur : avoir un téléphone Android.</string>
    <string name="texte_deuxieme_bouton">Bouton surprise !</string>
    <string name="scan_ended">Scan terminé</string>
    <string name="message_permission_localisation_refusee">Veuillez vous rendre dans les paramètres de l\'application et accepter la permission de localisation.</string>
    <string name="message_bluetooth_non_active">L\'application a besoin du bluetooth pour fonctionner. Veuillez l\'activer.</string>
    <string name="not_compatible">Téléphone non compatible avec le BLE.</string>
    <string name="texte_bouton_start_scan">Lancer le scan</string>
    <string name="texte_bouton_disconnect">Déconnexion</string>
    <string name="texte_bouton_toggleLed">Toggle LED</string>
    <string name="ledStatus">Statut de la LED</string>
    <string name="connected_to">Connecté à : %1$s</string>
    <string name="texte_bouton_ajout">Ajout !</string>
    <string name="uuid_not_found">UUID non trouvé</string>
    <string name="not_connected">Non connecté</string>
    <string name="enable_ble_notifications">Activation des notifications BLE</string>
    <string name="led_count">Compteur allumage LED : %1$d</string>
    <string name="texte_textView_currentConnexion">Connecté à</string>
    <string name="animate">Animer</string>
    <string name="scanning">Scan en cours...</string>
    <string name="texte_bouton_test">TEST</string>
    <string name="image_de_la_led">Image de la LED</string>
    <string name="message_localisation_non_activee">Veuillez activer la localisation afin de scanner les périphériques alentour.</string>

</resources>